Creation component Login + mise en page

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -9,7 +9,7 @@
             <input type="password" class="form-control col-6" id="exampleInputPassword1" placeholder="Password">
         </div>
         <div class="">
-            <button type="submit" class="btn btn-primary col-6">Sign In or Connect</button>
+            <button type="submit" class="btn btn-warning col-6">Sign In or Connect</button>
         </div>
     </form>
 </div>
