--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,7 @@
 .error {
-    border-color : red;
+    border-left : 5px solid darkred;
 }
 
 .success {
-    border-color : green
+    border-left : 5px solid green;
 }
