Correction mise en place des différents element

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,17 @@
-<div class="container ">
-            <div class="col-2 bg-dark" >
-                <div><fa-icon [icon]="faAngleLeft"> </fa-icon><fa-icon [icon]="faAngleRight"></fa-icon></div>
-                <div><fa-icon [icon]="faUserCircle"></fa-icon> utilisateur</div>
-                <div>MAIN</div>
-                <div><fa-icon [icon]="faCloud"></fa-icon>  stream</div>
-                <div><fa-icon [icon]="faHeart"></fa-icon> likes</div>
-                <div><fa-icon [icon]="faBookmark"></fa-icon> playlists</div>
-            </div>
+<div class="row">
+    <fa-icon [icon]="faAngleLeft"> </fa-icon>
+    <fa-icon [icon]="faAngleRight"></fa-icon>
+</div>
+<div>
+    <fa-icon [icon]="faUserCircle"></fa-icon> utilisateur
+</div>
+<div>MAIN</div>
+<div>
+    <fa-icon [icon]="faCloud"></fa-icon> stream
+</div>
+<div>
+    <fa-icon [icon]="faHeart"></fa-icon> likes
+</div>
+<div>
+    <fa-icon [icon]="faBookmark"></fa-icon> playlists
 </div>
