--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
-<div class="container pt-5">
+<!-- <div class="container pt-5">
   <ul class="nav nav-tabs">
     <li class="nav-item"><a class="nav-link" [class.active]="active.signIn" (click)="link('signIn')" >Sign In</a></li>
     <li class="nav-item"><a class="nav-link" [class.active]="active.create" (click)="link('create')" >Create account</a></li>
   </ul>
-</div>
-
-<app-trackvue></app-trackvue>
-<div class="row">
-  <div class="offset-2 col-10">
-<app-header></app-header>
+</div> -->
+<div class="container">
+  <div class="row">
+    <div class="col-2">
+      <app-menu></app-menu>
+    </div>
+    <div class="col">
+      <app-header></app-header>
+      <app-trackvue></app-trackvue>
+    </div>
   </div>
 </div>
-<app-menu></app-menu>
 
 <router-outlet></router-outlet>
