--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,9 +2,9 @@
             <div class="col-2 bg-dark" >
                 <div><fa-icon [icon]="faAngleLeft"> </fa-icon><fa-icon [icon]="faAngleRight"></fa-icon></div>
                 <div><fa-icon [icon]="faUserCircle"></fa-icon> utilisateur</div>
-                <div>MAIN</div>
-                <div><fa-icon [icon]="faCloud"></fa-icon>  stream</div>
-                <div><fa-icon [icon]="faHeart"></fa-icon> likes</div>
-                <div><fa-icon [icon]="faBookmark"></fa-icon> playlists</div>
+                <li>MAIN</li>
+                <li><fa-icon [icon]="faCloud"routerLink="/stream"></fa-icon>  stream</li>
+                <li><fa-icon [icon]="faHeart"routerLink="/likes"></fa-icon> likes</li>
+                <li><fa-icon [icon]="faBookmark"routerLink="/playlists"></fa-icon> playlists</li>
             </div>
 </div>
