--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-2">
+    <div class="col-2 px-0 pt-2 bg-dark">
       <app-menu (log)="displayForm($event)"></app-menu>
     </div>
-    <div class="col">
+    <div class="col p-0 body">
       <app-header></app-header>
       <app-trackvue *ngIf="!t"></app-trackvue>
       <div *ngIf="t" class="container pt-5">
