--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,21 +1,21 @@
-<div class="container bg-dark text-white">
-    <div class="row">
-        <div class="col">
+<div class="container text-white">
+    <div class="row pt-1">
+        <div class="offset-1 col-1">
             <fa-icon [icon]="faAngleLeft"> </fa-icon>
         </div>
-        <div class="col">
+        <div class="col-1">
             <fa-icon [icon]="faAngleRight"></fa-icon>
         </div>
     </div>
     <div class="row py-4">
-        <div class="col-6">
+        <div class="col m-0">
             <div class="iconUser">
-                <fa-icon [icon]="faUserCircle"></fa-icon>
+               <fa-icon [icon]="faUserCircle"></fa-icon>
             </div>
         </div>
-        <div class="col-6">
-            <div class="row">
-                pseudo utilisateur
+        <div class="col-7">
+            <div class="row pt-3">
+                <h3>pseudo</h3>
             </div>
             <div class="row">
                 <span *ngIf="!linkLog" (click)="logIn()">log in</span>
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div>MAIN</div>
+    <div><h3>MAIN</h3></div>
     <div>
         <fa-icon [icon]="faCloud"></fa-icon> stream
     </div>
