--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,8 +3,8 @@
                 <div><fa-icon [icon]="faAngleLeft"> </fa-icon><fa-icon [icon]="faAngleRight"></fa-icon></div>
                 <div><fa-icon [icon]="faUserCircle"></fa-icon> utilisateur</div>
                 <li>MAIN</li>
-                <li><fa-icon [icon]="faCloud"routerLink="/stream"></fa-icon>  stream</li>
-                <li><fa-icon [icon]="faHeart"routerLink="/likes"></fa-icon> likes</li>
-                <li><fa-icon [icon]="faBookmark"routerLink="/playlists"></fa-icon> playlists</li>
+                <li routerLink="/stream"><fa-icon [icon]="faCloud"></fa-icon>  stream</li>
+                <li routerLink="/likes"><fa-icon [icon]="faHeart"></fa-icon> likes</li>
+                <li routerLink="/playlists"><fa-icon [icon]="faBookmark"></fa-icon> playlists</li>
             </div>
 </div>
