Stream Component list + list vue

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,11 +13,9 @@
 
         </div>
 
-        <div class="col">
+        
 
-        </div>
-
-        <div class="col-1">
+        <div class="offset-5 col-1">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle btn-outline-dark" type="button" id="Settings" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
