--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 
 <app-trackvue></app-trackvue>
 <div class="row">
-  <div class="offset-2 col-10">
-<app-header></app-header>
+    <div class="offset-2 col-10">
+  <app-header></app-header>
+<app-menu></app-menu>
+<app-stream></app-stream>
+
   </div>
 </div>
-<app-menu></app-menu>
+
 
 <router-outlet></router-outlet>
