--- a/src/app/stream/stream.component.html
+++ b/src/app/stream/stream.component.html
@@ -1,1 +1,7 @@
-<p>stream works!</p>
+<section class="container-fluid">
+    <div class="row">
+      <div class='col-2' >
+        <app-trackvue  *ngFor="let t of tracks" [track]='t'></app-trackvue>
+    </div>
+    </div>
+</section>
