--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,14 +26,14 @@
     <div>
         <h3>MAIN</h3>
         <ul>
-            <li>
-                <fa-icon [icon]="faCloud" routerLink="/stream"></fa-icon> stream
+            <li routerLink="/stream">
+                <fa-icon [icon]="faCloud"></fa-icon> stream
             </li>
-            <li>
-                <fa-icon [icon]="faHeart" routerLink="/likes"></fa-icon> likes
+            <li routerLink="/likes">
+                <fa-icon [icon]="faHeart"></fa-icon> likes
             </li>
-            <li>
-                <fa-icon [icon]="faBookmark" routerLink="/playlists"></fa-icon> playlists
+            <li routerLink="/playlists">
+                <fa-icon [icon]="faBookmark"></fa-icon> playlists
             </li>
         </ul>
     </div>
