--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-2 px-0 pt-2 bg-dark">
-      <app-menu (log)="displayForm($event)"></app-menu>
+      <app-menu></app-menu>
     </div>
     <div class="col p-0 body">
       <app-header></app-header>
