--- a/src/app/trackvue/trackvue.component.css
+++ b/src/app/trackvue/trackvue.component.css
@@ -4,25 +4,49 @@
 }
 
 img {
-    width: 100%;
+    width:220px;
+    height : 250px;
+   
 }
+section {
+padding-left : 30px;
+padding-right  : 30px;
 
+}
 #Title {
-    font-size: 15px;
+    font-size: 10px;
     color: rgb(238, 226, 226)
 
 }
 
-#Album {
+#Album {    
     font-size : 10px;
     color: rgb(170, 169, 169)
 }
 .ligne {
     background-color: black;
-    text-align:center !important;
+    padding-left: 0px
   }
 
 fa-icon {
     color: rgb(170, 169, 169)
 }
 
+#duration {
+position: relative;
+text-align : left;
+font-size : 10px;
+color: rgb(238, 226, 226)
+}
+
+.ligne1 {
+    font-size : 10px;
+    padding-right: 0px;
+    padding-left : 0px;
+    color: rgb(238, 226, 226);
+   
+}
+
+p {
+    margin-bottom :0px
+}
