--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-7">
             <div class="row pt-3">
-                <h3>pseudo</h3>
+                <h3>{{ email }}</h3>
             </div>
             <div class="row">
                 <span *ngIf="!linkLog" (click)="logIn()">log in</span>
