--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-4">
             <div class="input-group mb-3 py-2">
-                <input type="text" class="form-control p-3 bg-dark text-white border border-dark" placeholder="search"
+                <input type="text" class="form-control bg-dark text-white border border-dark" placeholder="search"
                     [(ngModel)]="trackSearch" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                     <button class="input-group-text bg-dark border-dark" id="basic-addon2" (click)="Search()">
