--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,6 @@
       </div>
       <router-outlet></router-outlet>
     </div>
-   
-      
-  </div>
-  
+  </div>  
 </div>
+<app-player></app-player>
